--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages":[
-    "pages/movie/movie"
+    "pages/movie/movie",
+    "pages/top250/top250"
   ],
   "tabBar": {
     "backgroundColor":"black",
@@ -11,7 +12,7 @@
       "selectedIconPath":"pages/assets/img/3.png",
       "text": "影院热映"
     }, {
-      "pagePath": "pages/movie/movie",
+      "pagePath": "pages/top250/top250",
       "iconPath":"pages/assets/img/2.png",
       "selectedIconPath":"pages/assets/img/2.png",
       "text": "电影推荐"
